k8s-setup/ingress/path-based-ingress/path-ingress.yaml
# one ingress , two domain names
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-based-ingress
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingressClassName: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  tls: 
    - hosts: 
      - ingress-earthdx2.sethnexusonline.online 
      secretName: ingress-host-tls
  rules:
  - host: ingress-earthdx2.sethnexusonline.online 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: reactjs-service
            port: 
              number: 80
      - pathType: Prefix 
        path: "/nginx"
        backend: 
          service: 
            name: nginx-service 
            port: 
              number: 80
